[package]
name = "runestick-http"
version = "0.3.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick-http"
keywords = ["language", "scripting"]
categories = []
description = """
An HTTP module based on reqwest for runestick.
"""

[dependencies]
anyhow = "1.0.32"
reqwest = "0.10.7"
runestick = {version = "0.3.0", path = "../runestick"}

[dev-dependencies]
runestick-json = {version = "0.3.0", path = "../runestick-json"}