[package]
name = "runestick-json"
version = "0.2.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/udoprog/runestick"
homepage = "https://github.com/udoprog/runestick"
documentation = "https://docs.rs/runestick-json"
keywords = ["language", "scripting"]
categories = []
description = """
An JSON module based on serde_json for runestick.
"""

[dependencies]
serde_json = "1.0.57"
runestick = {version = "0.2.1", path = "../runestick"}