[package]
name = "runestick-json"
version = "0.3.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick-json"
keywords = ["language", "scripting"]
categories = []
description = """
An JSON module based on serde_json for runestick.
"""

[dependencies]
serde_json = "1.0.57"
runestick = {version = "0.3.0", path = "../runestick"}