[package]
name = "runestick-macros"
version = "0.6.16"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick"
keywords = ["language", "scripting"]
categories = []
description = """
Runescript, a generic stack-based virtual machine for Rust.
"""

[dependencies]
syn = { version = "1.0.31", features = ["full"] }
quote = "1.0.3"
proc-macro2 = { version = "1.0.10", features = ["span-locations"] }

[dev-dependencies]
runestick = { path = "../runestick", version = "0.6.16" }

[lib]
proc-macro = true
path = "src/lib.rs"