[package]
name = "runestick-macros"
version = "0.8.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick"
keywords = ["language", "scripting"]
categories = []
description = """
Runescript, a generic stack-based virtual machine for Rust.
"""

[dependencies]
syn = { version = "1.0.62", features = ["full"] }
quote = "1.0.9"
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }

[dev-dependencies]
runestick = { path = "../runestick", version = "0.8.0" }

[lib]
proc-macro = true
path = "src/lib.rs"
