[package]
name = "runestick-time"
version = "0.2.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/udoprog/runestick"
homepage = "https://github.com/udoprog/runestick"
documentation = "https://docs.rs/runestick-timer"
keywords = ["language", "scripting"]
categories = []
description = """
An time module based on tokio::time for runestick.
"""

[dependencies]
tokio = {version = "0.2.22", features = ["time"]}
runestick = {version = "0.2.1", path = "../runestick"}