[package]
name = "runestick"
version = "0.6.16"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick"
keywords = ["language", "scripting"]
categories = []
description = """
Runescript, a generic stack-based virtual machine for Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
twox-hash = {version = "1.5.0", default-features = false}
thiserror = {version = "1.0.20", default-features = false}
hashbrown = {version = "0.8.1", default-features = false, features = ["serde", "ahash"]}
serde = {version = "1.0.114", features = ["derive", "rc"]}
itoa = "0.4.6"
ryu = "1.0"
futures-core = "0.3.5"
futures-util = "0.3.5"
# used to store errors raised in user-defined functions.
anyhow = "1.0.32"
pin-project = "0.4.23"
byteorder = "1.3.4"

runestick-macros = {version = "0.6.16", path = "../runestick-macros"}

[dev-dependencies]
tokio = {version = "0.2.22", features = ["full"]}
checkers = "0.5.6"