[package]
name = "runestick"
version = "0.9.1"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/rune-rs/rune"
homepage = "https://github.com/rune-rs/rune"
documentation = "https://docs.rs/runestick"
keywords = ["language", "scripting"]
categories = []
description = """
Runescript, a generic stack-based virtual machine for Rust.
"""

[features]
default = []
bench = []

[dependencies]
log = "0.4.14"
twox-hash = { version = "1.6.0", default-features = false }
thiserror = { version = "1.0.24", default-features = false }
hashbrown = { version = "0.9.1", default-features = false, features = ["serde", "ahash"] }
serde = { version = "1.0.124", features = ["derive", "rc"] }
itoa = "0.4.7"
ryu = "1.0.5"
futures-core = "0.3.13"
futures-util = "0.3.13"
# used to store errors raised in user-defined functions.
anyhow = "1.0.38"
pin-project = "1.0.5"
byteorder = "1.3.4"
num-bigint = "0.4.0"

runestick-macros = {version = "0.9.1", path = "../runestick-macros"}

[dev-dependencies]
tokio = { version = "1.2.0", features = ["full"] }
checkers = "0.5.7"
static_assertions = "1.1.0"
rune = { version = "0.9.1", path = "../rune" }
