[package]
name = "stk-http"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/udoprog/stk"
homepage = "https://github.com/udoprog/stk"
documentation = "https://docs.rs/stk-http"
keywords = ["language", "scripting"]
categories = []
description = """
An HTTP module based on reqwest for STK.
"""

[dependencies]
anyhow = "1.0.32"
reqwest = "0.10.7"
stk = {version = "0.2.0", path = "../stk"}

[dev-dependencies]
stk-json = {version = "0.2.0", path = "../stk-json"}