[package]
name = "stk-json"
version = "0.2.0"
authors = ["John-John Tedro <udoprog@tedro.se>"]
license = "MIT/Apache-2.0"
edition = "2018"
readme = "README.md"
repository = "https://github.com/udoprog/stk"
homepage = "https://github.com/udoprog/stk"
documentation = "https://docs.rs/stk-json"
keywords = ["language", "scripting"]
categories = []
description = """
An JSON module based on serde_json for STK.
"""

[dependencies]
anyhow = "1.0.32"
serde_json = "1.0.57"
stk = {version = "0.2.0", path = "../stk"}